Fix issues with word wrapping and too long lines in Bugzilla (Bug #13880)

--- a/style/site_bugzilla.css
+++ b/style/site_bugzilla.css
@@ -667,6 +667,9 @@ body #comments pre.bz_comment_text,
 body #comments pre.bz_comment_text * {
 	font-family: 'Noto Sans', sans-serif !important;
 }
+body #comments pre.bz_comment_text {
+	word-break: break-all;
+}
 
 /*  SIDEBAR
  */
